added carousel in hero section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,68 @@
               </div>
             </div>
           </nav>
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-sm-12 col-md-7 d-flex align-items-center justify-content-center">
+                        <div>
+                            <h1>Macbook Pro</h1>
+                            <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, reiciendis. </p>
+                            <h3>$4500</h3>
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-7 d-flex align-items-center justify-content-center">
+                        <div>
+                            <h1>Amazon Echo</h1>
+                            <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, reiciendis. </p>
+                            <h3>$500</h3>
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <img src="images/banner-products/product-2.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-7 d-flex align-items-center justify-content-center">
+                        <div>
+                            <h1>Boom boom boom Box</h1>
+                            <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, reiciendis. </p>
+                            <h3>$1200</h3>
+                            <button class="btn">Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <img src="images/banner-products/product-3.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
+          </div>
     </header>
 
 
