--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="contaier">
+<body class="container">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -102,6 +102,47 @@
             </a>
           </div>
     </header>
+    <main">
+        <section id="phones" class="my-5">
+            <h1>Smart Phones</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/phones/phone-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Kidney Killer iphone</h5>
+                      <p class="card-text">This is a short card.</p>
+                      <h3>$1200</h3>
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/phones/phone-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <h3>$1200</h3>
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/phones/phone-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Read me Real!</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h3>$1200</h3>
+                      <button class="btn btn-warning">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+       
+    </main>
 
 
 
