--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       <h5 class="card-title">Kidney Killer iphone</h5>
                       <p class="card-text">This is a short card.</p>
                       <h3>$1200</h3>
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="btn">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -124,7 +124,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                       <h3>$1200</h3>
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="btn">Buy now</button>
                     </div>
                   </div>
                 </div>
@@ -135,7 +135,45 @@
                       <h5 class="card-title">Read me Real!</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <h3>$1200</h3>
-                      <button class="btn btn-warning">Buy now</button>
+                      <button class="btn">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section id="laptops" class="my-5">
+            <h1>Laptops</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/laptops/laptop-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Afsos for Asus</h5>
+                      <p class="card-text">This is a short card.</p>
+                      <h3>$1200</h3>
+                      <button class="btn">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/laptops/laptop-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Yoga Featuring</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      <h3>$1200</h3>
+                      <button class="btn">Buy now</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="images/laptops/laptop-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Dye Dell</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h3>$1200</h3>
+                      <button class="btn">Buy now</button>
                     </div>
                   </div>
                 </div>
