--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
         </section>
        
     </main>
+    <footer>
+        <p><small>©copyright hot@gadget.com</small></p>
+    </footer>
 
 
 
